@@ -9,6 +9,7 @@ Version 1.5.9+svn:
    * Fix flickering of units in the second part of the tutorial (bug #12923)
    * Fix high CPU usage in multiplayer lobby due to inefficient handling of
      friends and ignores lists.
+   * AmigaOS4: Minimum stack cookie to prevent stack overflow (patch #1107)
   * Graphics:
     * New portrait for the Halberdier
 
